--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
             "binaryPath": "/Users/macdealex/Desktop/Estudios/Universidad/2º Curso/Sistemas Operativos/Practica 2/SO_2/main",
             "binaryArgs": []
         }
-    ]
+    ],
+    "C_Cpp.errorSquiggles": "enabled"
 }
