Reestructuracion de jerarquia y solucion del makefile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
             "binaryArgs": []
         }
     ],
-    "C_Cpp.errorSquiggles": "enabled"
+    "C_Cpp.errorSquiggles": "enabled",
+    "files.associations": {
+        "types.h": "c"
+    }
 }
