--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # Ignore binary file
-main
+opcion1
+opcion2
 
 # Ignore object file
-main.o
+opcion1.o
+opcion2.o
 
 # Ignore pids file
-pids.txt
+pids.dat
 
 # Ignore VSCode folder
 .vscode/
